# QMLStyleExample

./: CMakeLists.txt  Main.qml  imports.qrc  main.cpp  qtquickcontrols2.conf
imports/ExampleStyle/: qmldir
